<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/myFrameLayout"
        android:layout_width="388dp"
        android:layout_height="292dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <view
            android:id="@+id/myFingerPainterViewId"
            class="com.example.fingerpainter_hfyst1.FingerPainterView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cd_importImageButton"
        android:onClick="importImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cd_brush"
        android:onClick="startBrushActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_brush" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cd_paint"
        android:onClick="startColourActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:srcCompat="@drawable/ic_colour" />

</androidx.constraintlayout.widget.ConstraintLayout>